--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "flubber": "^0.4.2",
     "react": "16.8.3",
-    "react-native": "0.59.4"
+    "react-native": "0.59.4",
+    "react-native-svg": "^9.4.0"
   },
   "devDependencies": {
-    "flow-bin": "0.92.0",
     "@babel/core": "^7.4.3",
     "@babel/runtime": "^7.4.3",
     "babel-jest": "^24.7.1",
+    "flow-bin": "0.92.0",
     "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.53.1",
     "react-test-renderer": "16.8.3"
