--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/drawer": "^5.0.0-alpha.41",
+    "@react-navigation/native": "^5.0.0-alpha.29",
     "flubber": "^0.4.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.5.3",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.6.4",
+    "react-native-screens": "^2.0.0-alpha.32",
     "react-native-svg": "^11.0.1"
   },
   "devDependencies": {
